// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe mostrar correctamente una imagen personalizada 1`] = `
<img
  alt="Product Name"
  className="productImg "
  src="https://hola.jpg"
/>
`;

exports[`ProductImage debe mostrar la imagen del producto 1`] = `
<div
  className="productCard "
>
  <img
    alt="Product Name"
    className="productImg "
    src="./coffee-mug.png"
  />
</div>
`;
